Successfully integrated data logging and updating basics on HTML page

--- a/VScode/Graduation_project_testing_modules/data/index.html
+++ b/VScode/Graduation_project_testing_modules/data/index.html
@@ -29,8 +29,10 @@
     <tr>
       <td>A</td>
       <td>---</td>
-      <td>%STATE%</td>
+      <td><span id="state">%STATE%</span></td>
       <td>---</td>
+      <td>---</td>
+      <td> <span id="LoRaData">%LoRaData%</span> </td>
     </tr>
     <tr>
       <td>B</td>
@@ -73,7 +75,7 @@
       <p><button id="button" class="button">Toggle</button></p>
     </div>
   -->
-  
+
   </div>
 
 
