Webpage standardization for tests

--- a/VScode/Graduation_project_testing_modules/data/index.html
+++ b/VScode/Graduation_project_testing_modules/data/index.html
@@ -15,57 +15,90 @@
     <h1>Receiver localization module</h1>
   </div>
 
-
+ <!-- CHANGE THIS for every node --> 
   <table>
     <tr>
       <th>Receiver</th>
-      <th>ON/OFF</th>
       <th>LED state</th>
+      <th>SD card at start-up</th>
       <th>GPS data</th>
       <th>Altitude</th>
       <th>Last LoRa package received</th>
       <th>Last updated</th>
     </tr>
     <tr>
-      <td>A</td>
-      <td>---</td>
-      <td><span id="state">%STATE%</span></td>
+      <td>Alex</td>
       <td>---</td>
       <td>---</td>
-      <td> <span id="LoRaData">%LoRaData%</span> </td>
-    </tr>
-    <tr>
-      <td>B</td>
       <td>---</td>
-      <td>%STATE%</td>
+      <td>---</td>
+      <td>---</td>
       <td>---</td>
     </tr>
     <tr>
-      <td>C</td>
+      <td>Brooke</td>
       <td>---</td>
-      <td>%STATE%</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
       <td>---</td>
     </tr>
     <tr>
-      <td>D</td>
-      <td>Helen Bennett</td>
-      <td>UK</td>
+      <td>Caldwell</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
     </tr>
     <tr>
-      <td>E</td>
-      <td>Yoshi Tannamuri</td>
-      <td>Canada</td>
+      <td>DiGiulian</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
     </tr>
     <tr>
-      <td>F</td>
-      <td>Giovanni Rovelli</td>
-      <td>Italy</td>
+      <td>Eva</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
     </tr>
     <tr>
-      <td>G</td>
-      <td>Giovanni Rovelli</td>
+      <td>Famke</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
+    </tr>
+    <tr>
+      <td>Gruber</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
+    </tr>
+    <tr>
+      <td>Honnold</td>
       <td> <p><button id="button" class="button"> <span id="state">%STATE%</span> </button></p> </td>
+      <td><span id="SD"> %SD% </span> </td>
+      <td> <span id="GPSData">%GPSData%</span> </td>
+      <td> <span id="AltData">%AltData%</span> </td>
+      <td><span id="LoRaData">%LoRaData%</span> </td>
+      <td><span id="now"> %now% </span> </td>
     </tr>
+    
   </table>
 
   <!--<div class="content">
