Added gateway functionality, includes changes to HTML and Javascript

--- a/VScode/RSSI_tests/data/index.html
+++ b/VScode/RSSI_tests/data/index.html
@@ -32,8 +32,8 @@
       <td><span id="SD"> %SD% </span> </td>
       <td> <span id="GPSData">%GPSData%</span> </td>
       <td> <span id="AltData">%AltData%</span> </td>
-      <td><span id="LoRaData">%LoRaData%</span> </td>
-      <td><span id="now"> %now% </span> </td>
+      <td><span id="LoRaData_Alex">%LoRaData_Alex%</span> </td>
+      <td><span id="now_Alex"> %now_Alex% </span> </td>
     </tr>
     <tr>
       <td>Brooke</td>
@@ -41,8 +41,8 @@
       <td>---</td>
       <td>---</td>
       <td>---</td>
-      <td>---</td>
-      <td>---</td>
+      <td><span id="LoRaData_Brooke">%LoRaData_Brooke%</span> </td>
+      <td><span id="now_Brooke"> %now_Brooke% </span> </td>
     </tr>
     <tr>
       <td>Caldwell</td>
@@ -50,8 +50,8 @@
       <td>---</td>
       <td>---</td>
       <td>---</td>
-      <td>---</td>
-      <td>---</td>
+      <td><span id="LoRaData_Caldwell">%LoRaData_Caldwell%</span> </td>
+      <td><span id="now_Caldwell"> %now_Caldwell% </span> </td>
     </tr>
     <tr>
       <td>DiGiulian</td>
@@ -59,8 +59,8 @@
       <td>---</td>
       <td>---</td>
       <td>---</td>
-      <td>---</td>
-      <td>---</td>
+      <td><span id="LoRaData_DiGiulian">%LoRaData_DiGiulian%</span> </td>
+      <td><span id="now_DiGiulian"> %now_DiGiulian% </span> </td>
     </tr>
     <tr>
       <td>Eva</td>
@@ -68,8 +68,8 @@
       <td>---</td>
       <td>---</td>
       <td>---</td>
-      <td>---</td>
-      <td>---</td>
+      <td><span id="LoRaData_Eva">%LoRaData_Eva%</span> </td>
+      <td><span id="now_Eva"> %now_Eva% </span> </td>
     </tr>
     <tr>
       <td>Famke</td>
@@ -77,8 +77,8 @@
       <td>---</td>
       <td>---</td>
       <td>---</td>
-      <td>---</td>
-      <td>---</td>
+      <td><span id="LoRaData_Famke">%LoRaData_Famke%</span> </td>
+      <td><span id="now_Famke"> %now_Famke% </span> </td>
     </tr>
     <tr>
       <td>Gruber</td>
@@ -86,8 +86,8 @@
       <td>---</td>
       <td>---</td>
       <td>---</td>
-      <td>---</td>
-      <td>---</td>
+      <td><span id="LoRaData_Gruber">%LoRaData_Gruber%</span> </td>
+      <td><span id="now_Gruber"> %now_Gruber% </span> </td>
     </tr>
     <tr>
       <td>Honnold</td>
