Adjusted SF and some minor implementation things

--- a/VScode/RSSI_tests/data/index.html
+++ b/VScode/RSSI_tests/data/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="topnav">
-    <h1>Receiver localization module</h1>
+    <h1>Localization module</h1>
   </div>
 
  <!-- CHANGE THIS for every node --> 
@@ -28,10 +28,10 @@
     </tr>
     <tr>
       <td>Alex</td>
-      <td> <p><button id="button" class="button"> <span id="state">%STATE%</span> </button></p> </td>
-      <td><span id="SD"> %SD% </span> </td>
-      <td> <span id="GPSData">%GPSData%</span> </td>
-      <td> <span id="AltData">%AltData%</span> </td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
+      <td>---</td>
       <td><span id="LoRaData_Alex">%LoRaData_Alex%</span> </td>
       <td><span id="now_Alex"> %now_Alex% </span> </td>
     </tr>
@@ -91,10 +91,10 @@
     </tr>
     <tr>
       <td>Honnold</td>
-      <td>---</td>
-      <td>---</td>
-      <td>---</td>
-      <td>---</td>
+      <td> <p><button id="button" class="button"> <span id="state">%STATE%</span> </button></p> </td>
+      <td><span id="SD"> %SD% </span> </td>
+      <td> <span id="GPSData">%GPSData%</span> </td>
+      <td> <span id="AltData">%AltData%</span> </td>
       <td>---</td>
       <td>---</td>
     </tr>
